--- a/Makefile.in
+++ b/Makefile.in
@@ -4,14 +4,17 @@ all : lib doc
 
 lib : resources/libraries/%LIB-NAME%
 
-resources/libraries/%LIB-NAME% : $(SRC)/xml6_sax%O% $(SRC)/xml6_ctx%O%
-	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/libraries/%LIB-NAME% $(SRC)/xml6_sax%O% $(SRC)/xml6_ctx%O% %LIB-LDFLAGS%
-
-$(SRC)/xml6_sax%O% : $(SRC)/xml6_sax.c $(SRC)/xml6_sax.h
-	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_sax%O% $(SRC)/xml6_sax.c %LIB-CFLAGS%
+resources/libraries/%LIB-NAME% : $(SRC)/xml6_ctx%O% $(SRC)/xml6_doc_frag%O% $(SRC)/xml6_sax%O%
+	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/libraries/%LIB-NAME% $(SRC)/xml6_ctx%O% %LIB-LDFLAGS% $(SRC)/xml6_doc_frag%O% $(SRC)/xml6_sax%O%
 
 $(SRC)/xml6_ctx%O% : $(SRC)/xml6_ctx.c $(SRC)/xml6_ctx.h
 	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_ctx%O% $(SRC)/xml6_ctx.c %LIB-CFLAGS%
+
+$(SRC)/xml6_doc_frag%O% : $(SRC)/xml6_doc_frag.c $(SRC)/xml6_doc_frag.h
+	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_doc_frag%O% $(SRC)/xml6_doc_frag.c %LIB-CFLAGS%
+
+$(SRC)/xml6_sax%O% : $(SRC)/xml6_sax.c $(SRC)/xml6_sax.h
+	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_sax%O% $(SRC)/xml6_sax.c %LIB-CFLAGS%
 
 test : all
 	@prove -e"perl6 -I ." -v t
