--- a/Makefile.in
+++ b/Makefile.in
@@ -5,7 +5,8 @@ all : lib doc
 lib : resources/libraries/%LIB-NAME%
 
 resources/libraries/%LIB-NAME% : $(SRC)/xml6_ctx%O% $(SRC)/xml6_doc_frag%O% $(SRC)/xml6_sax%O%
-	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/libraries/%LIB-NAME% $(SRC)/xml6_ctx%O% %LIB-LDFLAGS% $(SRC)/xml6_doc_frag%O% $(SRC)/xml6_sax%O%
+	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/libraries/%LIB-NAME% $(SRC)/xml6_ctx%O% $(SRC)/xml6_doc_frag%O% $(SRC)/xml6_sax%O% \
+        %LIB-LDFLAGS% 
 
 $(SRC)/xml6_ctx%O% : $(SRC)/xml6_ctx.c $(SRC)/xml6_ctx.h
 	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_ctx%O% $(SRC)/xml6_ctx.c %LIB-CFLAGS%
