--- a/Makefile.in
+++ b/Makefile.in
@@ -4,9 +4,9 @@ all : lib doc
 
 lib : resources/libraries/%LIB-NAME%
 
-resources/libraries/%LIB-NAME% : $(SRC)/dom%O%  $(SRC)/xpath%O% $(SRC)/xml6_ctx%O%  $(SRC)/xml6_doc%O% $(SRC)/xml6_doc_frag%O% $(SRC)/xml6_input%O% $(SRC)/xml6_node%O% $(SRC)/xml6_sax%O%
+resources/libraries/%LIB-NAME% : $(SRC)/dom%O%  $(SRC)/xpath%O% $(SRC)/xml6_ctx%O%  $(SRC)/xml6_doc%O% $(SRC)/xml6_input%O% $(SRC)/xml6_node%O% $(SRC)/xml6_sax%O%
 	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/libraries/%LIB-NAME% \
-        $(SRC)/dom%O%  $(SRC)/xpath%O% $(SRC)/xml6_ctx%O%  $(SRC)/xml6_doc%O% $(SRC)/xml6_doc_frag%O% $(SRC)/xml6_input%O% $(SRC)/xml6_node%O% $(SRC)/xml6_sax%O% \
+        $(SRC)/dom%O%  $(SRC)/xpath%O% $(SRC)/xml6_ctx%O%  $(SRC)/xml6_doc%O% $(SRC)/xml6_input%O% $(SRC)/xml6_node%O% $(SRC)/xml6_sax%O% \
         %LIB-LDFLAGS% 
 
 $(SRC)/dom%O% : $(SRC)/dom.c $(SRC)/dom.h
@@ -20,9 +20,6 @@ $(SRC)/xml6_ctx%O% : $(SRC)/xml6_ctx.c $(SRC)/xml6_ctx.h
 
 $(SRC)/xml6_doc%O% : $(SRC)/xml6_doc.c $(SRC)/xml6_doc.h
 	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_doc%O% $(SRC)/xml6_doc.c %LIB-CFLAGS%
-
-$(SRC)/xml6_doc_frag%O% : $(SRC)/xml6_doc_frag.c $(SRC)/xml6_doc_frag.h
-	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_doc_frag%O% $(SRC)/xml6_doc_frag.c %LIB-CFLAGS%
 
 $(SRC)/xml6_input%O% : $(SRC)/xml6_input.c $(SRC)/xml6_input.h
 	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_input%O% $(SRC)/xml6_input.c %LIB-CFLAGS%
