--- a/Makefile.in
+++ b/Makefile.in
@@ -8,9 +8,9 @@ lib : resources/libraries/%LIB-NAME%
 debug :
 	%MAKE% "DBG=-Wall -g"  all
 
-resources/libraries/%LIB-NAME% : $(SRC)/dom%O% $(SRC)/domXPath%O% $(SRC)/xml6_ctx%O% $(SRC)/xml6_doc%O% $(SRC)/xml6_gbl%O% $(SRC)/xml6_input%O% $(SRC)/xml6_node%O% $(SRC)/xml6_nodeset%O% $(SRC)/xml6_ns%O% $(SRC)/xml6_sax%O% $(SRC)/xml6_ref%O% $(SRC)/xml6_xpath%O%
+resources/libraries/%LIB-NAME% : $(SRC)/dom%O% $(SRC)/domXPath%O% $(SRC)/xml6_ctx%O% $(SRC)/xml6_doc%O% $(SRC)/xml6_gbl%O% $(SRC)/xml6_input%O% $(SRC)/xml6_node%O% $(SRC)/xml6_nodeset%O% $(SRC)/xml6_ns%O% $(SRC)/xml6_sax%O% $(SRC)/xml6_ref%O%  $(SRC)/xml6_reader%O% $(SRC)/xml6_xpath%O%
 	%LD% %LDSHARED% %LDFLAGS% %LDOUT%resources/libraries/%LIB-NAME% \
-        $(SRC)/dom%O%  $(SRC)/domXPath%O% $(SRC)/xml6_ctx%O% $(SRC)/xml6_doc%O% $(SRC)/xml6_gbl%O% $(SRC)/xml6_input%O% $(SRC)/xml6_node%O% $(SRC)/xml6_nodeset%O% $(SRC)/xml6_ns%O% $(SRC)/xml6_sax%O% $(SRC)/xml6_ref%O% $(SRC)/xml6_xpath%O% \
+        $(SRC)/dom%O%  $(SRC)/domXPath%O% $(SRC)/xml6_ctx%O% $(SRC)/xml6_doc%O% $(SRC)/xml6_gbl%O% $(SRC)/xml6_input%O% $(SRC)/xml6_node%O% $(SRC)/xml6_nodeset%O% $(SRC)/xml6_ns%O% $(SRC)/xml6_sax%O% $(SRC)/xml6_ref%O%  $(SRC)/xml6_reader%O% $(SRC)/xml6_xpath%O% \
         %LIB-LDFLAGS% 
 
 $(SRC)/dom%O% : $(SRC)/dom.c $(SRC)/dom.h
@@ -45,6 +45,9 @@ $(SRC)/xml6_sax%O% : $(SRC)/xml6_sax.c $(SRC)/xml6_sax.h
 
 $(SRC)/xml6_ref%O% : $(SRC)/xml6_ref.c $(SRC)/xml6_ref.h
 	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_ref%O% $(SRC)/xml6_ref.c %LIB-CFLAGS% $(DBG)
+
+$(SRC)/xml6_reader%O% : $(SRC)/xml6_reader.c $(SRC)/xml6_reader.h
+	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_reader%O% $(SRC)/xml6_reader.c %LIB-CFLAGS% $(DBG)
 
 $(SRC)/xml6_xpath%O% : $(SRC)/xml6_xpath.c $(SRC)/xml6_xpath.h
 	%CC% -I $(SRC) -c %CCSHARED% %CCFLAGS% %CCOUT%$(SRC)/xml6_xpath%O% $(SRC)/xml6_xpath.c %LIB-CFLAGS% $(DBG)
