add namespace POD

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 SRC=src
 
-all : lib doc
+all : lib
 
 lib : resources/libraries/%LIB-NAME%
 
@@ -61,10 +61,13 @@ clean :
 realclean : clean
 	@rm -f Makefile
 
-doc : lib/LibXML/Attr.md lib/LibXML/PI.md lib/LibXML/RegExp.md
+doc : lib/LibXML/Attr.md lib/LibXML/Namespace.md lib/LibXML/PI.md lib/LibXML/RegExp.md
 
 lib/LibXML/Attr.md : lib/LibXML/Attr.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/Attr.pm6 > lib/LibXML/Attr.md
+
+lib/LibXML/Namespace.md : lib/LibXML/Namespace.pm6
+	perl6 -I . --doc=Markdown lib/LibXML/Namespace.pm6 > lib/LibXML/Namespace.md
 
 lib/LibXML/PI.md : lib/LibXML/PI.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/PI.pm6 > lib/LibXML/PI.md
