initial rough cut at LibXML::Document documentation

--- a/Makefile.in
+++ b/Makefile.in
@@ -59,12 +59,24 @@ clean :
 	@rm -f $(SRC)/xml6_*%O% $(SRC)/dom%O% $(SRC)/domXPath%O% resources/libraries/*%LIB-NAME%
 
 realclean : clean
-	@rm -f Makefile
+	@rm -f Makefile lib/LibXML/*.md
 
-doc : lib/LibXML/Attr.md lib/LibXML/Namespace.md lib/LibXML/PI.md lib/LibXML/RegExp.md
+doc : lib/LibXML/Attr.md lib/LibXML/CDATASection.md lib/LibXML/Comment.md lib/LibXML/Document.md lib/LibXML/DocumentFragment.md lib/LibXML/Namespace.md lib/LibXML/PI.md lib/LibXML/RegExp.md
 
 lib/LibXML/Attr.md : lib/LibXML/Attr.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/Attr.pm6 > lib/LibXML/Attr.md
+
+lib/LibXML/Comment.md : lib/LibXML/Comment.pm6
+	perl6 -I . --doc=Markdown lib/LibXML/Comment.pm6 > lib/LibXML/Comment.md
+
+lib/LibXML/CDATASection.md : lib/LibXML/CDATASection.pm6
+	perl6 -I . --doc=Markdown lib/LibXML/CDATASection.pm6 > lib/LibXML/CDATASection.md
+
+lib/LibXML/Document.md : lib/LibXML/Document.pm6
+	perl6 -I . --doc=Markdown lib/LibXML/Document.pm6 > lib/LibXML/Document.md
+
+lib/LibXML/DocumentFragment.md : lib/LibXML/DocumentFragment.pm6
+	perl6 -I . --doc=Markdown lib/LibXML/DocumentFragment.pm6 > lib/LibXML/DocumentFragment.md
 
 lib/LibXML/Namespace.md : lib/LibXML/Namespace.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/Namespace.pm6 > lib/LibXML/Namespace.md
