replace LibXML::_Attr+NodeSetItem with LibXML::Item

--- a/Makefile.in
+++ b/Makefile.in
@@ -68,7 +68,7 @@ realclean : clean
 	@rm -f Makefile doc/*.md doc/*/*.md
 
 doc : README.md doc/Attr.md doc/Attr/Map.md doc/CDATA.md doc/Comment.md doc/Document.md doc/DocumentFragment.md\
-      doc/Dtd.md doc/Element.md doc/ErrorHandler.md  doc/InputCallback.md doc/Namespace.md doc/Node.md doc/PI.md doc/RelaxNG.md doc/Text.md\
+      doc/Dtd.md doc/Element.md doc/ErrorHandler.md doc/InputCallback.md doc/Item.md doc/Namespace.md doc/Node.md doc/Node/Set.md doc/PI.md doc/RelaxNG.md doc/Text.md\
       doc/Pattern.md doc/Parser.md doc/RegExp.md doc/Reader.md doc/Schema.md doc/XPath/Context.md doc/XPath/Expression.md
 
 README.md : lib/LibXML.pm6
@@ -108,11 +108,17 @@ doc/ErrorHandler.md : lib/LibXML/ErrorHandler.pm6
 doc/InputCallback.md : lib/LibXML/InputCallback.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/InputCallback.pm6 > doc/InputCallback.md
 
+doc/Item.md : lib/LibXML/Item.pm6
+	perl6 -I . --doc=Markdown lib/LibXML/Item.pm6 > doc/Item.md
+
 doc/Namespace.md : lib/LibXML/Namespace.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/Namespace.pm6 > doc/Namespace.md
 
 doc/Node.md : lib/LibXML/Node.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/Node.pm6 > doc/Node.md
+
+doc/Node/Set.md : lib/LibXML/Node/Set.pm6
+	perl6 -I . --doc=Markdown lib/LibXML/Node/Set.pm6 > doc/Node/Set.md
 
 doc/PI.md : lib/LibXML/PI.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/PI.pm6 > doc/PI.md
