--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ platform: x64
 environment:
         matrix:
         - test_moar: '2017.07'
-        - test_moar: '' #latest
+        - test_moar: '2019.17.1' #latest
 
 install:
   - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
