--- a/Makefile.in
+++ b/Makefile.in
@@ -70,7 +70,7 @@ clean :
 realclean : clean
 	@rm -f Makefile doc/*.md doc/*/*.md
 
-doc : README.md doc/Attr.md doc/Attr/Map.md doc/CDATA.md doc/Comment.md doc/Document.md doc/DocumentFragment.md\
+doc : README.md doc/Attr.md doc/Attr/Map.md doc/CDATA.md doc/Comment.md doc/Config.md doc/Document.md doc/DocumentFragment.md\
       doc/Dtd.md doc/Element.md doc/ErrorHandling.md doc/InputCallback.md doc/Item.md doc/Namespace.md doc/Native.md\
       doc/Node.md doc/Node/List.md doc/Node/Set.md doc/PI.md doc/RelaxNG.md doc/Text.md doc/Pattern.md\
       doc/Parser.md doc/PushParser.md doc/RegExp.md doc/Reader.md doc/Schema.md doc/XPath/Context.md doc/XPath/Expression.md
@@ -90,6 +90,9 @@ doc/Attr/Map.md : lib/LibXML/Attr/Map.pm6
 
 doc/Comment.md : lib/LibXML/Comment.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/Comment.pm6 > doc/Comment.md
+
+doc/Config.md : lib/LibXML/Config.pm6
+	perl6 -I . --doc=Markdown lib/LibXML/Config.pm6 > doc/Config.md
 
 doc/CDATA.md : lib/LibXML/CDATA.pm6
 	perl6 -I . --doc=Markdown lib/LibXML/CDATA.pm6 > doc/CDATA.md
